refactor: 抽取 gracefulShutdownHook 方法, 消除内联 new Thread
- shutdown逻辑抽取为独立方法, createCpuPool只关注建池
- 用 Thread.ofPlatform().name().unstarted() 替代 new Thread()
- 魔法值10抽取为 GRACEFUL_SHUTDOWN_SECONDS 常量